@startuml

interface FileSystemEntry {
    +print(depth: int)
}

class File {
    -name_: string
    +File(name: string)
    +print(depth: int)
}

class Directory {
    -name_: string
    -entries_: vector<FileSystemEntry>
    +Directory(name: string)
    +add(entry: FileSystemEntry)
    +print(depth: int)
}

File ..|> FileSystemEntry
Directory ..|> FileSystemEntry
Directory *-- FileSystemEntry : owns children

class Client {
    +buildTree()
    +print(entry: FileSystemEntry)
}

Client --> FileSystemEntry : uses

@enduml
